<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_name">OBDConnect</string>
	<string name="on">On</string>
   	<string name="off">Off</string>
   	<string name="Visible">Visible</string>
   	<string name="List">List</string>
   	<string name="Go">Go!</string>
</resources>
