<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/opaque_black">
    
    <ScrollView   android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="4" >
    
        <TextView android:id="@+id/debug_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/opaque_black"
            android:textColor="@color/opaque_white" />    
            
    </ScrollView>
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	
	    <Button
	    	android:id="@+id/button1"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:onClick="on"
	        android:text="@string/on" />
	    
	    <Button
	    	android:id="@+id/button2"
	      	android:layout_width="0dip"
	      	android:layout_height="wrap_content"
	      	android:layout_weight="2"
	      	android:onClick="off"
	      	android:text="@string/off" />
	
	   	<Button
	       	android:id="@+id/button3"
	    	android:layout_width="0dip"
	       	android:layout_height="wrap_content"
	       	android:layout_weight="4"
	       	android:onClick="visible"
	       	android:text="@string/Visible" />
	
	   	<Button
	      	android:id="@+id/button4"
	      	android:layout_width="0dip"
	      	android:layout_height="wrap_content"
	      	android:layout_weight="2"
	      	android:onClick="list"
	      	android:text="@string/List" />
	   
	   	<Button
	      	android:id="@+id/button5"
	      	android:layout_width="0dip"
	      	android:layout_height="wrap_content"
	      	android:layout_weight="2"
	      	android:onClick="initOBD"
	      	android:text="@string/Go" />
	       
	</LinearLayout>
	        
</LinearLayout>